crates/flight-rules/src/snapshots/flight_rules__snapshot_tests__error_malformed_condition.snap
---
source: crates/flight-rules/src/lib.rs
assertion_line: 1119
expression: err
---
Validation(
    "Invalid number: notanumber",
)
