crates/flight-rules/src/snapshots/flight_rules__snapshot_tests__error_whitespace_only_condition.snap
---
source: crates/flight-rules/src/lib.rs
expression: err
---
Validation(
    "Rule 1: Rule condition cannot be empty",
)
