crates/flight-rules/src/snapshots/flight_rules__snapshot_tests__rules_schema_yaml.snap
---
source: crates/flight-rules/src/lib.rs
expression: schema
---
schema: flight.ledmap/1
rules:
  - when: gear == DOWN
    do_action: "led.panel('GEAR').on()"
    do: "led.panel('GEAR').on()"
  - when: aoa > 14.5
    do_action: led.indexer.blink(rate_hz=6)
    do: led.indexer.blink(rate_hz=6)
defaults:
  hysteresis:
    aoa: 0.5
